--- a/style.css
+++ b/style.css
@@ -80,6 +80,10 @@ p {
     display: none;
 }
 
+.botao {
+    display: none;
+}
+
 @media screen  and  (max-device-width: 700px) {
 
     .cabeçalho-direita {
@@ -105,6 +109,7 @@ p {
     }
 
     .botao {
+        display: block;
         color: white;
         border: none;
         background: none;
